// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty state 1`] = `
.c5 {
  box-sizing: border-box;
  max-width: 600px;
}

.c6 {
  box-sizing: border-box;
  margin-bottom: 24px;
  text-align: center;
}

.c10 {
  box-sizing: border-box;
  text-align: center;
}

.c11 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 224px;
}

.c11:active {
  opacity: 0.56;
}

.c11:hover,
.c11:focus {
  background: #651FFF;
}

.c11:active {
  background: #354AA4;
}

.c11:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c12 {
  line-height: 1.5;
  border-radius: 4px;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  border: 1px solid;
  box-sizing: border-box;
  background-color: transparent;
  cursor: pointer;
  font-family: inherit;
  font-weight: bold;
  outline: none;
  opacity: .56;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all .3s;
  -webkit-font-smoothing: antialiased;
  border-color: rgba(255,255,255,0.87);
  color: #FFFFFF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-left: 24px;
  width: 224px;
  border-color: rgba(255,255,255,0.87);
  color: rgba(255,255,255,0.87);
}

.c12:hover {
  opacity: 1;
}

.c12:active {
  opacity: .24;
}

.c12 > span {
  display: flex;
  align-items: center;
  justify-content: center;
}

.c12:hover,
.c12:focus {
  border-color: #FFFFFF;
  color: #FFFFFF;
}

.c12:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c12:hover,
.c12:focus {
  border-color: #FFFFFF;
  color: #FFFFFF;
}

.c4 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  padding: 56px;
  padding-top: 32px;
  width: 100%;
  background-color: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c7 {
  display: block;
  outline: none;
  margin-bottom: 24px;
  margin-left: auto;
  margin-right: auto;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  font-size: 24px;
  margin: 0px;
  margin-bottom: 8px;
  font-weight: 700;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 14px;
  margin: 0px;
  font-weight: 400;
}

.c3 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  padding: 56px;
  padding-top: 32px;
  width: 100%;
  background-color: #222C59;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  overflow: auto;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        Servers
      </div>
    </div>
    <div
      class="c3 sc-AxirZ c4"
      width="100%"
    >
      <div
        class="c5"
      >
        <div
          class="c6"
        >
          <img
            class="c7"
            src="file_stub"
          />
          <div
            class="c8"
            font-size="24"
            font-weight="700"
          >
            Add your first Linux server to Teleport
          </div>
          <div
            class="c9"
            font-size="14"
            font-weight="400"
            style="opacity: 0.6;"
          >
            Teleport Server Access consolidates SSH access across all environments.
          </div>
        </div>
        <div
          class="c10"
        >
          <button
            class="c11"
            kind="primary"
            width="224px"
          >
            Add 
            server
          </button>
          <a
            class="c12"
            href="https://goteleport.com/docs/server-access/getting-started/"
            rel="noreferrer"
            target="_blank"
            width="224px"
          >
            <span>
              View Documentation
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`failed 1`] = `
.c5 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #f50057;
  color: #FFFFFF;
}

.c5 a {
  color: #FFFFFF;
}

.c4 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 240px;
}

.c4:active {
  opacity: 0.56;
}

.c4:hover,
.c4:focus {
  background: #651FFF;
}

.c4:active {
  background: #354AA4;
}

.c4:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c3 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  overflow: auto;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      Servers
    </div>
    <div
      class="c3"
    >
      <button
        class="c4"
        kind="primary"
        title=""
        width="240px"
      >
        Add Server
      </button>
    </div>
  </div>
  <div
    class="c5"
    kind="danger"
  >
    some error message
     
  </div>
</div>
`;

exports[`loaded 1`] = `
.c7 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 240px;
}

.c7:active {
  opacity: 0.56;
}

.c7:hover,
.c7:focus {
  background: #651FFF;
}

.c7:active {
  background: #354AA4;
}

.c7:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c19 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #2C3A73;
  border: 1px solid #1C254D;
  opacity: .87;
  color: rgba(255,255,255,0.87);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  height: 24px;
}

.c19:active {
  opacity: 0.56;
}

.c19:hover,
.c19:focus {
  background: #2C3A73;
  border: 1px solid rgba(255,255,255,0.1);
  opacity: 1;
}

.c19:active {
  opacity: 0.24;
}

.c19:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c15 {
  display: inline-block;
  transition: color .3s;
  color: #FFFFFF;
  font-size: 16px;
}

.c17 {
  display: inline-block;
  transition: color .3s;
  color: #FFFFFF;
}

.c20 {
  display: inline-block;
  transition: color .3s;
  margin-left: 8px;
  margin-right: -8px;
  color: rgba(255,255,255,0.56);
  font-size: 14px;
}

.c18 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  background-color: #111B48;
  color: rgba(255,255,255,0.87);
  margin-bottom: 4px;
  margin-right: 4px;
}

.c12 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 4px;
  color: #FFFFFF;
}

.c3 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c10 {
  box-sizing: border-box;
  display: flex;
}

.c11 {
  box-sizing: border-box;
  margin-right: 8px;
  display: flex;
  align-items: center;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  overflow: auto;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

.c4 {
  box-sizing: border-box;
  margin-right: 16px;
  width: 280px;
  display: flex;
  align-items: center;
  height: 32px;
  border: 1px solid;
  border-radius: 4px;
  border-color: rgba(255,255,255,0.24);
}

.c5 {
  opacity: 0.75;
  font-size: 11px;
  font-weight: 500;
  padding: 0 8px;
  border-bottom-left-radius: 4px;
  border-top-left-radius: 4px;
}

.c6 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-sizing: border-box;
  border-bottom-left-radius: unset;
  border-top-left-radius: unset;
  display: block;
  outline: none;
  width: 100%;
  height: 100%;
  box-shadow: none;
  padding-left: 8px;
  font-size: 12px;
  color: rgba(255,255,255,0.87);
  background-color: #222C59;
}

.c6::-ms-clear {
  display: none;
}

.c6:read-only {
  cursor: not-allowed;
}

.c6::placeholder {
  opacity: 1;
  color: rgba(255,255,255,0.24);
  font-size: 12px;
}

.c6:hover,
.c6:focus {
  background: #2C3A73;
}

.c16 {
  background: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-collapse: collapse;
  border-spacing: 0;
  border-radius: 8px;
  font-size: 12px;
  width: 100%;
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
  border-bottom-right-radius: 8px;
  border-bottom-left-radius: 8px;
}

.c16 > thead > tr > th,
.c16 > tbody > tr > th,
.c16 > tfoot > tr > th,
.c16 > thead > tr > td,
.c16 > tbody > tr > td,
.c16 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c16 > thead > tr > th:first-child,
.c16 > tbody > tr > th:first-child,
.c16 > tfoot > tr > th:first-child,
.c16 > thead > tr > td:first-child,
.c16 > tbody > tr > td:first-child,
.c16 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c16 > thead > tr > th:last-child,
.c16 > tbody > tr > th:last-child,
.c16 > tfoot > tr > th:last-child,
.c16 > thead > tr > td:last-child,
.c16 > tbody > tr > td:last-child,
.c16 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c16 > tbody > tr > td {
  vertical-align: baseline;
}

.c16 > thead > tr > th {
  background: #111B48;
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c16 > thead > tr > th .c14 {
  font-weight: bold;
  font-size: 8px;
  margin-left: 8px;
}

.c16 > tbody > tr > td {
  color: rgba(255,255,255,0.87);
  line-height: 16px;
}

.c16 tbody tr {
  border-bottom: 1px solid #1C254D;
}

.c16 tbody tr:hover {
  background-color: rgb(37,49,98);
}

.c16 tbody > tr:last-child td:first-child {
  border-bottom-left-radius: 8px;
}

.c16 tbody > tr:last-child td:last-child {
  border-bottom-right-radius: 8px;
}

.c8 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
}

.c13 {
  background: none;
  border: none;
  cursor: pointer;
}

.c13 .c14 {
  font-size: 20px;
  transition: all 0.3s;
  opacity: 0.5;
}

.c13:hover .c14,
.c13:focus .c14 {
  opacity: 1;
}

.c13:disabled {
  cursor: default;
}

.c13:disabled .c14 {
  opacity: 0.1;
}

.c9 {
  box-sizing: border-box;
  font-size: 12px;
  min-width: 200px;
  outline: none;
  border: none;
  border-radius: 200px;
  height: 32px;
  transition: all .2s;
  color: rgba(255,255,255,0.87);
  background: #111B48;
  padding-left: 16px;
  padding-right: 16px;
}

.c9:hover,
.c9:focus,
.c9:active {
  background: #1C254D;
  box-shadow: inset 0 2px 4px rgba(0,0,0,.24);
  color: rgba(255,255,255,0.87);
}

.c9::placeholder {
  color: rgba(255,255,255,0.24);
  font-size: 12px;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      Servers
    </div>
    <div
      class="c3"
    >
      <div
        class="c4"
        width="280px"
      >
        <div
          class="c5"
        >
          SSH:
        </div>
        <input
          class="c6"
          color="text.primary"
          placeholder="login@host:port"
        />
      </div>
      <button
        class="c7"
        kind="primary"
        title=""
        width="240px"
      >
        Add Server
      </button>
    </div>
  </div>
  <nav
    class="c8"
  >
    <input
      class="c9"
      placeholder="SEARCH..."
      value=""
    />
    <div
      class="c10"
    >
      <div
        class="c11"
      >
        <div
          class="c12"
          color="primary.contrastText"
        >
          SHOWING 
          <strong>
            1
          </strong>
           - 
          <strong>
            7
          </strong>
           of
           
          <strong>
            7
          </strong>
        </div>
      </div>
      <div
        class="c10"
      >
        <button
          class="c13"
          disabled=""
          title="Previous page"
        >
          <span
            class="c14 c15 icon icon-arrow-left-circle "
            color="light"
            font-size="3"
          />
        </button>
        <button
          class="c13"
          disabled=""
          title="Next page"
        >
          <span
            class="c14 c15 icon icon-arrow-right-circle "
            color="light"
            font-size="3"
          />
        </button>
      </div>
    </div>
  </nav>
  <table
    class="c16"
  >
    <thead>
      <tr>
        <th>
          <a>
            Hostname
            <span
              class="c14 c17 icon icon-chevron-up "
              color="light"
            />
          </a>
        </th>
        <th>
          <a>
            Address
            <span
              class="c14 c17 icon icon-chevrons-expand-vertical "
              color="light"
            />
          </a>
        </th>
        <th>
          Labels
        </th>
        <th />
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          duzsevkig
        </td>
        <td>
          172.10.1.1:3022
        </td>
        <td>
          <div
            class="c18"
            kind="secondary"
          >
            cluster: one
          </div>
          <div
            class="c18"
            kind="secondary"
          >
            kernel: 4.15.0-51-generic
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c19"
            height="24px"
            kind="border"
          >
            CONNECT
            <span
              class="c14 c20 icon icon-caret-down "
              color="text.secondary"
              font-size="2"
            />
          </button>
        </td>
      </tr>
      <tr>
        <td>
          facuzguv
        </td>
        <td>
          172.10.1.1:3022
        </td>
        <td>
          <div
            class="c18"
            kind="secondary"
          >
            cluster: one
          </div>
          <div
            class="c18"
            kind="secondary"
          >
            kernel: 4.15.0-51-generic
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c19"
            height="24px"
            kind="border"
          >
            CONNECT
            <span
              class="c14 c20 icon icon-caret-down "
              color="text.secondary"
              font-size="2"
            />
          </button>
        </td>
      </tr>
      <tr>
        <td>
          fujedu
        </td>
        <td>
          172.10.1.20:3022
        </td>
        <td>
          <div
            class="c18"
            kind="secondary"
          >
            cluster: one
          </div>
          <div
            class="c18"
            kind="secondary"
          >
            kernel: 4.15.0-51-generic
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c19"
            height="24px"
            kind="border"
          >
            CONNECT
            <span
              class="c14 c20 icon icon-caret-down "
              color="text.secondary"
              font-size="2"
            />
          </button>
        </td>
      </tr>
      <tr>
        <td>
          kuhinur
        </td>
        <td>
          172.10.1.1:3022
        </td>
        <td>
          <div
            class="c18"
            kind="secondary"
          >
            cluster: one
          </div>
          <div
            class="c18"
            kind="secondary"
          >
            kernel: 4.15.0-51-generic
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c19"
            height="24px"
            kind="border"
          >
            CONNECT
            <span
              class="c14 c20 icon icon-caret-down "
              color="text.secondary"
              font-size="2"
            />
          </button>
        </td>
      </tr>
      <tr>
        <td>
          zebpecda
        </td>
        <td>
          172.10.1.1:3022
        </td>
        <td>
          <div
            class="c18"
            kind="secondary"
          >
            cluster: one
          </div>
          <div
            class="c18"
            kind="secondary"
          >
            kernel: 4.15.0-51-generic
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c19"
            height="24px"
            kind="border"
          >
            CONNECT
            <span
              class="c14 c20 icon icon-caret-down "
              color="text.secondary"
              font-size="2"
            />
          </button>
        </td>
      </tr>
      <tr>
        <td>
          zebpecda
        </td>
        <td>
          <span
            style="cursor: default;"
            title="This node is connected to cluster through reverse tunnel"
          >
            ⟵ tunnel
          </span>
        </td>
        <td>
          <div
            class="c18"
            kind="secondary"
          >
            cluster: one
          </div>
          <div
            class="c18"
            kind="secondary"
          >
            kernel: 4.15.0-51-generic
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c19"
            height="24px"
            kind="border"
          >
            CONNECT
            <span
              class="c14 c20 icon icon-caret-down "
              color="text.secondary"
              font-size="2"
            />
          </button>
        </td>
      </tr>
      <tr>
        <td>
          zebpecda
        </td>
        <td>
          <span
            style="cursor: default;"
            title="This node is connected to cluster through reverse tunnel"
          >
            ⟵ tunnel
          </span>
        </td>
        <td>
          <div
            class="c18"
            kind="secondary"
          >
            cluster: one
          </div>
          <div
            class="c18"
            kind="secondary"
          >
            kernel: 4.15.0-51-generic
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c19"
            height="24px"
            kind="border"
          >
            CONNECT
            <span
              class="c14 c20 icon icon-caret-down "
              color="text.secondary"
              font-size="2"
            />
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`readonly empty state 1`] = `
.c3 {
  box-sizing: border-box;
  max-width: 664px;
  margin-left: auto;
  margin-right: auto;
  padding: 56px;
  color: rgba(255,255,255,0.87);
  background-color: #222C59;
  text-align: center;
  border-radius: 12px;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 28px;
  line-height: 32px;
  margin: 0px;
  margin-bottom: 16px;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  overflow: auto;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        Servers
      </div>
    </div>
    <div
      class="c3"
      color="text.primary"
    >
      <div
        class="c4"
      >
        No Servers Found
      </div>
      <div
        class="c5"
      >
        Either there are no 
        servers
         in the "
        <span
          class="c6"
        >
          im-a-cluster
        </span>
        " cluster, or your roles don't grant you access.
      </div>
    </div>
  </div>
</div>
`;
